--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: '1.21'
 
     - name: Build
-      run: go build -v ./...
+      run: cd app && go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: cd app && go test -v ./...
